--- a/style.css
+++ b/style.css
@@ -148,14 +148,14 @@ dorm button svg {
   width: 36.3rem;
   height: 15.2rem;
   position: relative;
-  padding: 4.8rem 6.4rem 6.4rem;
+  padding: 4.8rem 5rem 5rem;
   background: var(--bc-white);
 }
 
 .modal  h2 {
 
   font-weight: 700;
-  font-size: 3.2rem;
+  font-size: 3rem;
   line-height: 4rem;
   text-align: center;
 }
@@ -212,3 +212,25 @@ dorm button svg {
 
 
 
+@media screen  and (max-width: 600px) {
+
+
+
+  main {
+
+    width: 30rem;
+    padding: 2.8rem;
+  }
+
+  h1 {
+
+    font-size: 2.2rem;
+
+  }
+
+  form button {
+
+    width: 100%;
+
+  } 
+ }
